--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+target/zzpj-0.0.1-SNAPSHOT.jar
+target/zzpj-0.0.1-SNAPSHOT.jar.original
+target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+.idea/workspace.xml
