--- a/.gitignore
+++ b/.gitignore
@@ -32,17 +32,7 @@ target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.l
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
-.idea/compiler.xml 
-.idea/vcs.xml
-.idea/encodings.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/workspace.xml
+.idea/*
 
 zzpj.iml
 
@@ -107,4 +97,4 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-traget/
+target/*
