--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,4 +3,4 @@ jdbc.url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1
 jdbc.user=test_db
 jdbc.password=test_db
 hibernate.dialect=org.hibernate.dialect.H2Dialect
-hibernate.hbm2ddl.auto=drop-create
+hibernate.hbm2ddl.auto=drop
